# peft-from-scratch

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: tests.yml
notebooks/: lora_gpt2_tutorial.ipynb
peft_lib/: __init__.py
peft_lib/benchmarks/: __init__.py  glue_eval.py  memory_profiler.py
peft_lib/core/: __init__.py  base.py  exceptions.py  registry.py  typing.py  utils.py
peft_lib/merging/: __init__.py  merge_lora.py  model_soup.py  ties_merging.py
peft_lib/methods/: README.md  __init__.py  adapters.py  dora.py  ia3.py  lora.py  prefix_tuning.py  prompt_tuning.py  qlora.py  vera.py
peft_lib/quantization/: __init__.py  bnb_utils.py
peft_lib/training/: __init__.py  callbacks.py  schedulers.py  trainer.py
tests/: conftest.py
tests/benchmarks/: test_memory_budget.py
tests/integration/: test_merging.py  test_multi_method.py  test_trainer.py
tests/property/: test_shapes.py
tests/regression/: test_parameter_counts.py
tests/unit/: test_adapters.py  test_core.py  test_dora.py  test_ia3.py  test_injection_contract.py  test_lora.py  test_method_branches.py  test_prefix_tuning.py  test_prompt_tuning.py  test_qlora.py  test_training_components.py  test_vera.py
