[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "peft-lib"
version = "0.1.0"
description = "A standalone, from-scratch Parameter-Efficient Fine-Tuning (PEFT) library with rigorous math, typing, and tests."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "peft-from-scratch contributors" }]
keywords = ["peft", "lora", "dora", "vera", "ia3", "fine-tuning", "transformers", "pytorch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "torch>=2.1",
    "safetensors>=0.4",
]

[project.optional-dependencies]
# Transformers integration (tutorials, GLUE harness, real-model tests).
hf = ["transformers>=4.40", "datasets>=2.18", "accelerate>=0.25"]
# 4-bit / 8-bit quantization for QLoRA. Linux + CUDA only.
quant = ["bitsandbytes>=0.43"]
# Development / CI toolchain.
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "mypy>=1.10",
]
all = ["peft-lib[hf,quant,dev]"]

[project.urls]
Homepage = "https://github.com/peft-from-scratch/peft-lib"
Documentation = "https://github.com/peft-from-scratch/peft-lib/blob/main/ARCHITECTURE.md"
Issues = "https://github.com/peft-from-scratch/peft-lib/issues"

[tool.hatch.build.targets.wheel]
packages = ["peft_lib"]

# ----------------------------------------------------------------------------
# Ruff: formatter + linter. Zero warnings is the contract (see ARCHITECTURE.md).
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["peft_lib", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "D",    # pydocstyle (Google convention)
    "ANN",  # flake8-annotations
    "PT",   # pytest style
]
ignore = [
    "D105",   # magic methods need no docstring
    "D107",   # __init__ documented at class level
    "ANN401", # we genuinely need typing.Any at HF-model boundaries
    "N812",   # `import torch.nn.functional as F` is idiomatic
    "B008",   # dataclass field(default_factory=...) triggers false positives
]

[tool.ruff.lint.per-file-ignores]
# Tests may use single-letter math names, magic numbers, and need no docstrings.
"tests/**" = ["D", "ANN", "N806", "N803", "PLR2004", "E501", "PT018"]
# Method files use single-letter math notation (A, B, W matrices; vectors d, b).
"peft_lib/methods/**" = ["N803", "N806", "N815"]
"**/__init__.py" = ["D104", "F401"]  # re-exports
"peft_lib/benchmarks/**" = ["D"]
"notebooks/**" = ["D", "ANN", "E402"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["peft_lib"]

[tool.ruff.lint.flake8-annotations]
# `self` / `cls` and `__init__` returns don't need annotations.
mypy-init-return = true
suppress-none-returning = true

# ----------------------------------------------------------------------------
# mypy: strict. The library ships py.typed.
# ----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_reexport = true
show_error_codes = true
plugins = []

[[tool.mypy.overrides]]
# Third-party libs without stubs. Confined to the integration boundary.
module = [
    "transformers.*",
    "datasets.*",
    "bitsandbytes.*",
    "accelerate.*",
    "safetensors.*",
]
ignore_missing_imports = true

# ----------------------------------------------------------------------------
# pytest
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "gpu: requires a CUDA device",
    "quant: requires bitsandbytes (4-bit/8-bit)",
    "hf: requires the transformers stack",
    "slow: long-running (training/benchmark) tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["peft_lib"]
omit = ["peft_lib/benchmarks/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",
]
